# book

./: .gitignore  CLAUDE.md  cookies.txt  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
.claude/: settings.local.json
.claude/commands/: sp.write-chapter.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: chapter-template.mdx
auth-service/: .env.example  package-lock.json  package.json  tsconfig.json
auth-service/src/: auth.ts  index.ts
backend/: .env.example  pyproject.toml  requirements.txt
backend/scripts/: index_chapters.py  test_connection.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  chapters.py  chat.py  index.py  translate.py
backend/src/middleware/: auth.py
backend/src/models/: chapter.py  chat.py  translate.py  translation.py
backend/src/services/: embedding.py  gemini.py  groq_llm.py  indexer.py  prompts.py  qdrant.py  rag.py  translator.py
docs/: intro.md
docs/appendix/: assessments.md  resources.md
docs/hardware/: edge-kit.md  workstation.md
docs/module-1-ros2/: index.md  nodes-topics.md  rclpy.md  services-actions.md  urdf.md
docs/module-2-simulation/: gazebo-basics.md  index.md  physics-sim.md  sensors.md  unity-integration.md
docs/module-3-nvidia-isaac/: index.md  isaac-ros.md  isaac-sim.md  nav2.md  vslam.md
docs/module-4-vla/: capstone.md  cognitive-planning.md  index.md  whisper.md
specs/001-docusaurus-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-book-content/: data-model.md  (+5 more)
(+123 files in other folders)
